--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,26 @@
 <body class="page">
     <!-- Навігація -->
     <header class="header">
-        <div class="container header-container">
-            <a class="logo-header link" lang="en" href="/">Web<span class="logo-part">Studio</span></a>
-
+        <div class="container header__container">
+            <a class="logo link" lang="en" href="/">Web<span class="logo__dark">Studio</span></a>
             <nav class="nav">
-                <ul class="header-list">
-                    <li class="header-item"><a class="nav-link link" href="./index.html">Студія</a></li>
-                    <li class="header-item"><a class="nav-link link current" href="">Портфоліо</a></li>
-                    <li class="header-item"><a class="nav-link link" href="">Контакти</a></li>
+                <ul class="nav__list">
+                    <li class="nav__item"><a class="nav__link link " href="./index.html">Студія</a></li>
+                    <li class="nav__item"><a class="nav__link link nav__link--current"href="">Портфоліо</a></li>
+                    <li class="nav__item"><a class="nav__link link" href="">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="contacts-list">
-                <li class="contacts-list-item"><a class="contacts-header-link link" href="mailto:info@devstudio.com">
-                        <svg class="contacts-icon" width="16" height="12">
+            <ul class="header__list">
+                <li class="header__item"><a class="header__link link" href="mailto:info@devstudio.com">
+                        <svg class="header__icon" width="16" height="12">
                             <use href="./images/icons/icons.svg#icon-envelope">
 
                             </use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
-                <li class="contacts-list-item"><a class="contacts-header-link link" href="tel:+380961111111">
-                        <svg class="contacts-icon" width="10" height="16">
+                <li class="header__item"><a class="header__link link" href="tel:+380961111111">
+                        <svg class="header__icon" width="10" height="16">
                             <use href="./images/icons/icons.svg#icon-smartphone">
 
                             </use>
